--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,11 +9,11 @@
     tools:showIn="@layout/activity_main">
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
+    <fragment
+        android:id="@+id/selector_fragment"
+        android:name="com.vegamex.audiolibrosbasico.fragments.SelectorFragment"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:id="@+id/recycler_view"
-        android:scrollbars="vertical"
-        android:background="#ffffff"/>
+        android:layout_weight="1" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
