--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,4 +16,11 @@
         android:layout_height="match_parent"
         android:layout_weight="1" />
 
+    <fragment
+        android:id="@+id/detalle_fragment"
+        android:name="com.vegamex.audiolibrosbasico.fragments.DetalleFragment"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+
 </LinearLayout>
