--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/appBarLayout"
     tools:context=".MainActivity">
 
     <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -11,7 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
-        app:layout_scrollFlags="scroll|enterAlways">
+        app:layout_scrollFlags="scroll|exitUntilCollapsed"
+        app:expandedTitleMarginBottom="?attr/actionBarSize">
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="bottom"
+            app:tabMode="scrollable"
+            app:layout_anchor="@id/appBarLayout"
+            app:layout_anchorGravity="bottom"/>
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -19,7 +29,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:layout_collapseMode="pin"/>/>
+            app:layout_collapseMode="pin"/>
 
     </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -29,8 +39,9 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        app:layout_anchor="@id/appBarLayout"
+        app:layout_anchorGravity="bottom|right|end"
         app:srcCompat="@drawable/search_ic_history_black_24dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
