Coso del content main

--- a/app/src/main/res/layout-w600dp/content_main.xml
+++ b/app/src/main/res/layout-w600dp/content_main.xml
@@ -4,23 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
+    tools:context="com.vegamex.audiolibrosbasico.MainActivity"
     tools:showIn="@layout/activity_main">
-
-
     <fragment
         android:id="@+id/selector_fragment"
         android:name="com.vegamex.audiolibrosbasico.fragments.SelectorFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
-
     <fragment
         android:id="@+id/detalle_fragment"
         android:name="com.vegamex.audiolibrosbasico.fragments.DetalleFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
-
 </LinearLayout>
