--- a/app/src/main/res/layout/fragment_detalle.xml
+++ b/app/src/main/res/layout/fragment_detalle.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/detalle_fragment"
     android:background="#ffffff"
     tools:context=".MainActivity">
 
