--- a/app/src/main/res/menu/menu_selector.xml
+++ b/app/src/main/res/menu/menu_selector.xml
@@ -8,10 +8,10 @@
         android:icon="@android:drawable/ic_menu_set_as"
         android:orderInCategory="100"
         app:showAsAction="ifRoom|withText"
-        android:title="Último leido"/>
+        android:title="Último leído"/>
     <item
         android:id="@+id/menu_buscar"
-        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:actionViewClass="android.widget.SearchView"
         android:orderInCategory="90"
         android:icon="@android:drawable/ic_menu_search"
         app:showAsAction="ifRoom|collapseActionView"
