--- a/app/src/main/res/layout/elemento_selector.xml
+++ b/app/src/main/res/layout/elemento_selector.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <ImageView
         android:id="@+id/portada"
         android:layout_width="120dp"
@@ -22,5 +21,4 @@
         android:lines="2"
         android:textColor="#000000"
         android:textSize="18dp" />
-
-</LinearLayout>
+</RelativeLayout>
