--- a/app/src/main/res/layout/fragment_detalle.xml
+++ b/app/src/main/res/layout/fragment_detalle.xml
@@ -41,6 +41,20 @@
             android:layout_below="@id/autor"
             android:layout_centerHorizontal="true"
             android:src="@mipmap/ic_launcher" />
+
+        <Button
+            android:id="@+id/Detener"
+            android:layout_width="wrap_content"
+            android:layout_below="@id/portada"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Detener" />
     </RelativeLayout>
+
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/f"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin" />-->
 
 </androidx.core.widget.NestedScrollView>
